PATS logo no longer wraps on small screens

--- a/app/assets/stylesheets/components/letters.scss
+++ b/app/assets/stylesheets/components/letters.scss
@@ -1,5 +1,7 @@
 .letters {
   @include ignore-selection;
+
+  white-space: nowrap;
 }
 
 .animated-letter {
